# secretary

./: Cargo.toml  README.md  publish.sh  run_examples.sh
docs/: DERIVE_MACRO.md  EXAMPLES.md  GETTING_STARTED.md  PROJECT_STRUCTURE.md
examples/: async.rs  async_distributed.rs  async_example.rs  async_force.rs  async_generate_json.rs  async_generate_json_with_context.rs  contextual_prompt_analysis.rs  contextual_prompt_basic.rs  contextual_prompt_conversation.rs  derive_example.rs  distributed.rs  generate_json.rs  generate_json_with_context.rs  product_review_analysis.rs  sync.rs  sync_force.rs
secretary-derive/: Cargo.toml
secretary-derive/src/: data_structure_field.rs  default_implementations.rs  errors.rs  field.rs  field_mapping.rs  field_types.rs  implementations.rs  lib.rs  task_implementations.rs  utilities.rs
secretary-derive/src/field_attributes/: task.rs
src/: constants.rs  contextual_prompt.rs  distributions.rs  error.rs  lib.rs  llm.rs  macros.rs  message.rs  message_list.rs  openai.rs  prompt.rs  structural_prompt.rs  traits.rs  utilities.rs
src/llm_providers/: azure.rs  mod.rs  openai.rs
src/tasks/: basic_task.rs  contextual_prompt.rs  contextual_task.rs  mod.rs
src/utilities/: json.rs  llm.rs  mod.rs
