[package]
name = "secretary"
version = "0.2.20"
edition = "2024"
description = "Translate natural languages into structural data"
authors =  ["Xinyu Bao <baoxinyuworks@163.com>"]
readme = "README.md"
repository = "https://github.com/aspadax/secretary"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
async-openai = "0.28.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread"] }
