[package]
name = "secretary"
version = "0.4.32"
edition = "2024"
description = "Transform natural language into structured data using large language models (LLMs) with powerful derive macros"
authors =  ["Xinyu Bao <baoxinyuworks@163.com>"]
readme = "README.md"
repository = "https://github.com/aspadax/secretary"
license = "MIT"

[workspace]
members = [".", "secretary-derive"]
resolver = "2"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
secretary-derive = { path = "secretary-derive", version = "0.4.30" }
surfing = { version = "0.1.1", features = ["serde"] }
async-trait = "0.1.88"
futures = "0.3"
reqwest = { version = "0.12.22", features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.46.1", features = ["full"] }
regex = "1.11.1"
