[package]
name = "secretary-derive"
version = "0.2.40"
edition = "2024"
description = "Derive macros for the secretary crate"
authors = ["Xinyu Bao <baoxinyuworks@163.com>"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }