[package]
name = "secretary-derive"
version = "0.4.30"
edition = "2024"
description = "Procedural macros for the Secretary library - enables #[derive(Task)] for natural language to structured data transformation"
authors = ["Xinyu Bao <baoxinyuworks@163.com>"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
